[FIX] Fix bug where menu alignment was off in firefox.
[Resolves #112]

--- a/css/base.css
+++ b/css/base.css
@@ -143,6 +143,7 @@ p:first-child { margin-top: 0 }
   font-size: 12px;
   font-weight: normal;
   list-style-type: none;
+  list-style-position: initial;
 }
 .sidebar-widget { margin-top: 15px }
 form { font-size: .9rem }
